--- a/frontdemo/index.html
+++ b/frontdemo/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="descrition" content="flskdfjlksadjfl">
+    <meta name="keywords" content="sdfdsafd">
+    <link rel="icon" href="/images/logo.png">
     <title>GH-Demo</title>
 </head>
 
