--- a/frontdemo/doc-struct.html
+++ b/frontdemo/doc-struct.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <!-- meta标签主要是为了搜索引擎收录用的配置 -->
+    <!-- 注释快捷键ctrl + / -->
     <meta charset="UTF-8">
     <meta name="descrition" content="flskdfjlksadjfl">
     <meta name="keywords" content="sdfdsafd">
@@ -11,6 +13,7 @@
 
 <body>
     <h1>Hello World</h1>
+    <div>guoguo</div>
 </body>
 
 </html>
