--- a/frontdemo/doc-struct.html
+++ b/frontdemo/doc-struct.html
@@ -13,7 +13,10 @@
 
 <body>
     <h1>Hello World</h1>
+    <!-- div块状元素：最后结尾带一个回车 -->
     <div>guoguo</div>
+    <!-- span行状元素：最后不带回车 -->
+    <span>gggggg</span>
 </body>
 
 </html>
