--- a/frontdemo/doc-struct.html
+++ b/frontdemo/doc-struct.html
@@ -13,9 +13,16 @@
 
 <body>
     <h1>Hello World</h1>
-    <!-- div块状元素：最后结尾带一个回车 -->
+    <!-- div块状元素：最后结尾带一个回车，占一整块 -->
     <div>guoguo</div>
-    <!-- span行状元素：最后不带回车 -->
+    <!-- 标题元素：div标签的扩展 -->
+    <h1>111111</h1>
+    <!-- 段落：div扩展-加了一些行间距的限制 -->
+    <p>水电费就克里斯朵夫看来是大家发了胜利的咖啡机阿莱克斯大家老师的</p>
+
+
+
+    <!-- span行状元素：最后不带回车，用多少占多少 -->
     <span>gggggg</span>
 </body>
 
