--- a/frontdemo/doc-struct.html
+++ b/frontdemo/doc-struct.html
@@ -18,7 +18,8 @@
     <!-- 标题元素：div标签的扩展 -->
     <h1>111111</h1>
     <!-- 段落：div扩展-加了一些行间距的限制 ；过滤掉所有的空格和回车-->
-    <p>水电费就克里斯朵夫看来是大家发了胜利的咖啡机阿莱克斯大家老师的</p>
+    <!--< 小于号的转义 &gt; 大于号的转义 &lt;   -->
+    <p>水电费<i>斜体</i>就克里<b>加粗</b>斯朵<del>删除线</del>夫看来是大家<ins>下划线</ins>发了胜利的咖啡机阿莱克斯大家老师的</p>
 
 
 
