--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -71,6 +71,8 @@
         return 0;
         }
     </pre>
+
+    <img src="https://cdn.acwing.com/media/article/image/2022/03/01/1_3ec4c1cf99-mountain.jpg">ß
 </body>
 
 </html>
