--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -72,7 +72,7 @@
         }
     </pre>
 
-    <img src="https://cdn.acwing.com/media/article/image/2022/03/01/1_3ec4c1cf99-mountain.jpg">ß
+    <img src="https://cdn.acwing.com/media/article/image/2022/03/01/1_3ec4c1cf99-mountain.jpg" alt="moutain">ß
 </body>
 
 </html>
