--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -71,8 +71,12 @@
         return 0;
         }
     </pre>
+    <!-- img标签中的，alt代表图片不显示时才显露的内容 -->
+    <!-- src里放路径，可以是网络路径，也可以是本地路径 -->
+    <img src="/images/mountain.jpeg" alt="moutain">
 
-    <img src="https://cdn.acwing.com/media/article/image/2022/03/01/1_3ec4c1cf99-mountain.jpg" alt="moutain">ß
+    //加载音视频资源
+    <audio controls src="/audios/03 IN MY ARMS TONIGHT (Original Karaoke).m4a"></audio>
 </body>
 
 </html>
