--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -74,9 +74,16 @@
     <!-- img标签中的，alt代表图片不显示时才显露的内容 -->
     <!-- src里放路径，可以是网络路径，也可以是本地路径 -->
     <img src="/images/mountain.jpeg" alt="moutain">
-
-    //加载音视频资源
+    </br>
+    <!-- 加载音视频资源 -->
     <audio controls src="/audios/03 IN MY ARMS TONIGHT (Original Karaoke).m4a"></audio>
+    <!-- 音视频第二种写法 -->
+    <audio controls>
+        <source src="11111" type="audio/mpeg">
+        <source src="/audios/01 眠れない夜を抱いて.m4a" type="audio/mpeg">
+    </audio>
+
+
 </body>
 
 </html>
