--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -77,13 +77,14 @@
     </br>
     <!-- 加载音视频资源 -->
     <audio controls src="/audios/03 IN MY ARMS TONIGHT (Original Karaoke).m4a"></audio>
-    <!-- 音视频第二种写法 -->
+    <!-- 音视频第二种写法: 备胎写法，audio-source父子嵌套标签 type属性 -->
     <audio controls>
         <source src="11111" type="audio/mpeg">
         <source src="/audios/01 眠れない夜を抱いて.m4a" type="audio/mpeg">
     </audio>
 
-
+    <video controls
+        src="https://www.bilibili.com/video/BV1eV411b7Lh?share_source=copy_web&vd_source=ae5b591ced9d5349f77ef00ed3961804"></video>
 </body>
 
 </html>
