--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -87,6 +87,7 @@
         <source
             src="https://www.bilibili.com/video/BV1eV411b7Lh?share_source=copy_web&vd_source=ae5b591ced9d5349f77ef00ed3961804"
             type="video/mp4">
+        <source src="/videos/video2.mp4" type="video/mp4">
     </video>
 </body>
 
