--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -83,7 +83,7 @@
         <source src="/audios/01 眠れない夜を抱いて.m4a" type="audio/mpeg">
     </audio>
 
-    <video controls>
+    <video controls width="800px">
         <source
             src="https://www.bilibili.com/video/BV1eV411b7Lh?share_source=copy_web&vd_source=ae5b591ced9d5349f77ef00ed3961804"
             type="video/mp4">
