--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -89,6 +89,9 @@
             type="video/mp4">
         <source src="/videos/video2.mp4" type="video/mp4">
     </video>
+
+    <!-- 超链接 -->
+    <a href="https://www.acwing.com">Acwing</a>
 </body>
 
 </html>
