--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -91,7 +91,12 @@
     </video>
 
     <!-- 超链接 -->
+    <!-- 第一种写法：站外跳转 -->
+    </br>
     <a href="https://www.acwing.com">Acwing</a>
+    <a href="/second.html">站内跳转</a>
+
+
 </body>
 
 </html>
