--- a/frontdemo/second.html
+++ b/frontdemo/second.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <audio src="/audios/01 眠れない夜を抱いて.m4a"></audio>
+    <audio autoplay controls src="/audios/01 眠れない夜を抱いて.m4a"></audio>
 </body>
 
 </html>
