--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -94,7 +94,7 @@
     <!-- 超链接 -->
     <!-- 第一种写法：站外跳转 -->
     </br>
-    <a href="https://www.acwing.com"> <img src="/images/logo.png" />Acwing</a>
+    <a href="https://www.acwing.com"> <img src="/images/logo.png" / width="30">Acwing</a>
     <!-- target：_blank 在新空白页开启页面 -->
     <a href="/second.html" target="_blank">站内跳转</a>
 
