--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -126,10 +126,10 @@
         <textarea name="" id="" cols="30" rows="10"></textarea>
         <br>
         <label for="language"></label>
-        <section name="language" id=language>
+        <select name="language" id=language>
             <option value="cpp">cpp</option>
             <option value="java">java</option>
-        </section>
+        </select>
         <br>
         <button type="submit">提交</button>
     </form>
