--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -127,8 +127,10 @@
         <br>
         <label for="language"></label>
         <select name="language" id=language>
+            <option value="">请选择</option>
             <option value="cpp">cpp</option>
-            <option value="java">java</option>
+            <!-- selected被选中 -->
+            <option selected value="java">java</option>
         </select>
         <br>
         <button type="submit">提交</button>
