--- a/frontdemo/page.html
+++ b/frontdemo/page.html
@@ -133,6 +133,15 @@
             <option selected value="java">java</option>
         </select>
         <br>
+        <br>
+        <ul>
+            <li>list</li>
+            <li>array</li>
+        </ul>
+        <ol>
+            <li>gh</li>
+            <li>gg</li>
+        </ol>
         <button type="submit">提交</button>
     </form>
 
